# hbflutter

./: .gitlab-ci.yml  .gitmodules  Android.mk.in  Application.mk.in  CMakeLists.install  CMakeLists.txt  README.md  Toolchain-Windows.cmake  Toolchain.cmake
sdk/libav/include/libavformat/: avio.h
src/flutter_app/: ..gitignore.un~  .gitignore  pubspec.yaml
src/flutter_app/android/app/: build.gradle  google-services.json
src/flutter_app/android/app/src/main/: AndroidManifest.xml
src/flutter_app/android/app/src/main/java/com/homebase/flutter_app/: MainActivity.java
src/flutter_app/android/app/src/profile/: AndroidManifest.xml
src/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
src/flutter_app/lib/: homePanel.dart  login.dart  main.dart
src/flutter_app1/: pubspec.yaml
src/flutter_app1/lib/: backchannel.page.dart  garage.page.dart  home.page.dart  login.page.dart  main.dart
